Update version with pg
